// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoryListItem should render and match snapshot 1`] = `
<div
  className="row"
>
  <Connect(Link)
    href="/augsburg/de/willkommen"
  >
    <img
      className="categoryThumbnail"
      src="https://cms.integreat-ap…03/Beratung-150x150.png"
    />
    <Highlighter
      caseSensitive={false}
      className="categoryCaption"
      matchClass="highlight"
      matchElement="strong"
      matchStyle={Object {}}
      search=""
    >
      Willkommen
    </Highlighter>
  </Connect(Link)>
  <Connect(Link)
    className="subRow"
    href="/augsburg/de/test"
    key="5234"
  >
    <img
      className="categoryThumbnail"
      src="https://cms.integreat-ap…03/Beratung-150x150.png"
    />
    <div
      className="categoryCaption"
    >
      Child
    </div>
  </Connect(Link)>
</div>
`;

exports[`CategoryListItem should replace empty thumbnail 1`] = `
<div
  className="row"
>
  <Connect(Link)
    href=""
  >
    <img
      className="categoryThumbnail"
      src="test-file-stub"
    />
    <Highlighter
      caseSensitive={false}
      className="categoryCaption"
      matchClass="highlight"
      matchElement="strong"
      matchStyle={Object {}}
      search=""
    >
      GotNoThumb :O
    </Highlighter>
  </Connect(Link)>
  <Connect(Link)
    className="subRow"
    href=""
    key="42"
  >
    <div
      className="categoryThumbnail"
    />
    <div
      className="categoryCaption"
    >
      GotNoThumb :O
    </div>
  </Connect(Link)>
</div>
`;
